--- a/Languages/French/DefInjected/JobDef/Jobs.xml
+++ b/Languages/French/DefInjected/JobDef/Jobs.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
+  
   <!--EN: learning-->
   <LearnTech.reportString>Apprend</LearnTech.reportString>
   <!--EN: documenting-->
@@ -8,15 +8,13 @@
   <DocumentTechDigital.reportString>Documente</DocumentTechDigital.reportString>
   <!--EN: researching-->
   <ResearchTech.reportString>Recherche</ResearchTech.reportString>
-  <!--NEW-->
+  <!--EN: scanning-->
   <ScanBook.reportString>Numérise</ScanBook.reportString>
   <!--EN: practicing-->
   <TrainWeapon.reportString>S'entraîne avec</TrainWeapon.reportString>
-  <!--NEW-->
   <!--EN: training melee.-->
   <PlayAtDummy.reportString>S'entraîne au combat.</PlayAtDummy.reportString>
-  <!--NEW-->
   <!--EN: training shooting.-->
   <PlayAtTarget.reportString>S'entraîne au tir.</PlayAtTarget.reportString>
-
+  
 </LanguageData> 
