--- a/Languages/French/DefInjected/ThingDef/Things.xml
+++ b/Languages/French/DefInjected/ThingDef/Things.xml
@@ -6,8 +6,9 @@
   <!--EN: A desk to study and research technologies. Comes with all your faction's starting research.-->
   <StudyDesk.description>Un bureau pour étudier et rechercher les technologies. Pré-équipé avec toutes les recherches de départ de votre faction.</StudyDesk.description>
 
-  <!--NEW-->
+  <!--Network Terminal-->
   <NetworkTerminal.label>Terminal réseau</NetworkTerminal.label>
+  <!--An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.-->
   <NetworkTerminal.description>Un point d'accès aux connaissances d'entrée et de sortie entre les colons et la base de données. Livré avec solitaire pré-installé.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
@@ -15,12 +16,14 @@
   <!--EN: A sturdy shelf for storing knowledge in form of books.-->
   <BookShelf.description>Une étagère solide pour y ranger des connaissances sous forme de livres.</BookShelf.description>
 
-  <!--NEW-->
+  <!--Network Server-->
   <NetworkServer.label>Serveur réseau</NetworkServer.label>
+  <!--The ultimate cloud storage unit to host your research database. All library space you'll ever need.-->
   <NetworkServer.description>L'unité de stockage cloud ultime pour héberger votre base de données. Tout l'espace de bibliothèque dont vous aurez besoin.</NetworkServer.description>
 
-  <!--NEW-->
+  <!--Technology Database Drive-->
   <TechDrive.label>Lecteur de base de données technologique</TechDrive.label>
+  <!--A hard drive filled with knowledge. Can only be archived on a network terminal.-->
   <TechDrive.description>Un disque dur rempli de connaissances. Ne peut être archivé que sur un terminal réseau.</TechDrive.description>
 
   <!--EN: Unfinished technical book-->
@@ -31,9 +34,6 @@
   <!--EN: A book filled with knowledge.-->
   <TechBook.description>Un livre empli de connaissances.</TechBook.description>
 
-
-  <!-- Borrewed from ItchyFlea's Practise Target -->
-
   <!--EN: Target Stand-->
   <Target.label>Cible d'entrainement</Target.label>
   <!--EN: A target for your sharpshooters to hone their skills with.-->
@@ -43,6 +43,5 @@
   <MrDummy.label>Manequin d'entraînement</MrDummy.label>
   <!--EN: A straw dummy for training melee skill.-->
   <MrDummy.description>Une poupée de paille pour s'entraîner au corps-à-corps.</MrDummy.description>
-
 
 </LanguageData>
