--- a/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
@@ -31,6 +31,10 @@
   <Expand>展开</Expand>
   <!--EN: Collapse-->
   <Collapse>折叠</Collapse>
+  
+  <!--NEW-->
+  <CurrentTechLevelFor>Current level for {0_nameDef}</CurrentTechLevelFor>
+  
   <!--EN: Catalog-->
   <TabCatalogue>目录</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
