--- a/Languages/French/Keyed/HumanResources_keys.xml
+++ b/Languages/French/Keyed/HumanResources_keys.xml
@@ -31,6 +31,10 @@
   <Expand>Étendre</Expand>
   <!--EN: Collapse-->
   <Collapse>Réduire</Collapse>
+
+  <!--NEW-->
+  <CurrentTechLevelFor>Current level for {0_nameDef}</CurrentTechLevelFor>
+  
   <!--EN: Catalog-->
   <TabCatalogue>Catalogue</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
