--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -17,6 +17,8 @@
   <Expand>Expand</Expand>
   <Collapse>Collapse</Collapse>
   <!--NEW--><CurrentTechLevelFor>Current level for {0_nameDef}</CurrentTechLevelFor>
+  <!--NEW--><MasteredButNotDocumented>Mastered by {0_nameDef} but not yet documented.</MasteredButNotDocumented>
+  <!--NEW--><MasteredAndArchived>Mastered by {0_nameDef} and archived.</MasteredAndArchived>
   <TabCatalogue>Catalog</TabCatalogue>
   <AvailableBooksReport>{0} books in {1} shelves</AvailableBooksReport>
   <AvailableOnNetwork>{0} technologies online</AvailableOnNetwork>
