--- a/Languages/French/Keyed/HumanResources_keys.xml
+++ b/Languages/French/Keyed/HumanResources_keys.xml
@@ -32,9 +32,11 @@
   <!--EN: Collapse-->
   <Collapse>Réduire</Collapse>
 
-  <!--NEW-->
-  <CurrentTechLevelFor>Current level for {0_nameDef}</CurrentTechLevelFor>
-  
+  <!--NEW--><CurrentTechLevelFor>Current level for {0_nameDef}</CurrentTechLevelFor>
+  <!--NEW--><MasteredButNotDocumented>Mastered by {0_nameDef} but not yet documented.</MasteredButNotDocumented>
+  <!--NEW--><MasteredAndArchived>Mastered by {0_nameDef} and archived.</MasteredAndArchived>
+
+
   <!--EN: Catalog-->
   <TabCatalogue>Catalogue</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
