--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -26,6 +26,7 @@
   <ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
   <ClickToUnassign>Left-click to unassign.</ClickToUnassign>
   <RightClickToTree>Right-click to show on Research tree.</RightClickToTree>
+  <!--NEW--><Assignments>Assignments:</Assignments>
   <AssignedTo>{0} is tasked with:</AssignedTo>
   <AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
   <AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
